--- a/themes/Jusikd_theme/layouts/main_template.htm
+++ b/themes/Jusikd_theme/layouts/main_template.htm
@@ -127,10 +127,10 @@ loadJS = 1
 					             data-endspeed="1500"
 					             data-endeasing="Power4.easeIn"
 					             data-autoplay="true"
+					             data-volume="mute"
 					             data-autoplayonlyfirsttime="false"
 					             data-nextslideatend="true"
 					             data-forceCover="1"
-					             data-dottedoverlay="none"
 					             data-aspectratio="16:9"
 					             data-forcerewind="on"
 					             style="z-index: 2">
@@ -142,8 +142,8 @@ loadJS = 1
 
 					        <!-- LAYER NR. 2 -->
 					        <div class="tp-caption large_bold_white_25 customin customout tp-resizeme"
-					             data-x="center" data-hoffset="0"
-					             data-y="170"
+					             data-x="left" data-hoffset="0"
+					             data-y="bottom" data-voffset="-150"
 					             data-customin="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:5;scaleY:5;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
 					             data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
 					             data-speed="600"
@@ -151,14 +151,14 @@ loadJS = 1
 					             data-easing="Power4.easeOut"
 					             data-endspeed="600"
 					             data-endeasing="Power0.easeIn"
-					             style="z-index: 3">The clearest way into the Universe<br/>is through a forest wilderness.
+					             style="z-index: 3">Попасть пальцем в небо?
 
 					        </div>
 
 					        <!-- LAYER NR. 3 -->
 					        <div class="tp-caption medium_text_shadow customin customout tp-resizeme"
-					             data-x="center" data-hoffset="0"
-					             data-y="bottom" data-voffset="-140"
+					             data-x="left" data-hoffset="0"
+					             data-y="bottom" data-voffset="-90"
 					             data-customin="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:5;scaleY:5;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
 					             data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
 					             data-speed="600"
@@ -166,7 +166,7 @@ loadJS = 1
 					             data-easing="Power4.easeOut"
 					             data-endspeed="600"
 					             data-endeasing="Power0.easeIn"
-					             style="z-index: 4">John Muir
+					             style="z-index: 4">Пукнуть в муку под верным углом?
 					        </div>
 				        </li>
 
@@ -186,10 +186,10 @@ loadJS = 1
 					             data-endspeed="1500"
 					             data-endeasing="Power4.easeIn"
 					             data-autoplay="true"
+					             data-volume="mute"
 					             data-autoplayonlyfirsttime="false"
 					             data-nextslideatend="true"
 					             data-forceCover="1"
-					             data-dottedoverlay="none"
 					             data-aspectratio="16:9"
 					             data-forcerewind="on"
 					             style="z-index: 2">
@@ -201,8 +201,8 @@ loadJS = 1
 
 					        <!-- LAYER NR. 2 -->
 					        <div class="tp-caption large_bold_white_25 customin customout tp-resizeme"
-					             data-x="center" data-hoffset="0"
-					             data-y="170"
+					             data-x="left" data-hoffset="0"
+					             data-y="bottom" data-voffset="-150"
 					             data-customin="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:5;scaleY:5;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
 					             data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
 					             data-speed="600"
@@ -210,14 +210,14 @@ loadJS = 1
 					             data-easing="Power4.easeOut"
 					             data-endspeed="600"
 					             data-endeasing="Power0.easeIn"
-					             style="z-index: 3">The clearest way into the Universe<br/>is through a forest wilderness.
+					             style="z-index: 3">Настоящий профессионал своего дела
 
 					        </div>
 
 					        <!-- LAYER NR. 3 -->
 					        <div class="tp-caption medium_text_shadow customin customout tp-resizeme"
-					             data-x="center" data-hoffset="0"
-					             data-y="bottom" data-voffset="-140"
+					             data-x="left" data-hoffset="0"
+					             data-y="bottom" data-voffset="-90"
 					             data-customin="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:5;scaleY:5;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
 					             data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
 					             data-speed="600"
@@ -225,12 +225,10 @@ loadJS = 1
 					             data-easing="Power4.easeOut"
 					             data-endspeed="600"
 					             data-endeasing="Power0.easeIn"
-					             style="z-index: 4">John Muir
+					             style="z-index: 4">Палас - Матрас
 					        </div>
 				        </li>
-
 			        </ul>
-
 			        <div class="tp-bannertimer"></div>
 		        </div>
 	        </div>
@@ -476,12 +474,21 @@ loadJS = 1
                 {
                     delay:9000,
                     startwidth:1170,
-                    startheight:500,
-                    fullScreen:"on",
+                    startheight:550,
+                    fullScreen:"off",
                     forceFullWidth:"on",
                     minFullScreenHeight:"320",
                     videoJsPath:"{{ 'rs-plugin/videojs/'|theme }}",
-                    fullScreenOffsetContainer: "header"
+                    fullScreenOffsetContainer: "header",
+
+                    navigationHAlign:"left",
+                    navigationVAlign:"bottom",
+                    navigationHOffset:130,
+                    navigationVOffset:50,
+
+                    navigationType:"bullet",
+                    navigationArrows:"solo",
+                    navigationStyle:"round",
                 });
 
         });	//ready
