--- a/themes/Jusikd_theme/layouts/main_template.htm
+++ b/themes/Jusikd_theme/layouts/main_template.htm
@@ -257,6 +257,7 @@ loadJS = 1
 				</div>
 			</div>
 			<!-- /.Setion About us -->
+	        {% partial 'includes/miscellaneous' %}
 			<!-- Section section-recentworks 1 -->
 			<div id="section-recentworks1">
 				<div class="container">
