--- a/themes/Jusikd_theme/layouts/main_template.htm
+++ b/themes/Jusikd_theme/layouts/main_template.htm
@@ -126,7 +126,7 @@ loadJS = 1
 					             data-easing="Power4.easeOut"
 					             data-endspeed="1500"
 					             data-endeasing="Power4.easeIn"
-					             data-autoplay="true"
+					             data-autoplay="false"
 					             data-volume="mute"
 					             data-autoplayonlyfirsttime="false"
 					             data-nextslideatend="true"
@@ -185,7 +185,7 @@ loadJS = 1
 					             data-easing="Power4.easeOut"
 					             data-endspeed="1500"
 					             data-endeasing="Power4.easeIn"
-					             data-autoplay="true"
+					             data-autoplay="false"
 					             data-volume="mute"
 					             data-autoplayonlyfirsttime="false"
 					             data-nextslideatend="true"
@@ -258,6 +258,9 @@ loadJS = 1
 			</div>
 			<!-- /.Setion About us -->
 	        {% partial 'includes/miscellaneous' %}
+
+	        {% partial 'includes/directions' %}
+
 			<!-- Section section-recentworks 1 -->
 			<div id="section-recentworks1">
 				<div class="container">
