--- a/themes/Jusikd_theme/partials/includes/miscellaneous.htm
+++ b/themes/Jusikd_theme/partials/includes/miscellaneous.htm
@@ -16,14 +16,14 @@
 			<!-- /.Item -->
 			<!-- Item -->
 			<div class="item col-6 col-sm-6 col-md-3">
-				<h1 class="counter-value">190</h1>
+				<h1><span class="counter-value">190</span>+</h1>
 				<p>реализованных проектов</p>
 			</div>
 			<!-- /.Item -->
 			<!-- Item -->
 			<div class="item col-6 col-sm-6 col-md-3">
 				<h1 class="counter-value">500</h1>
-				<p>Неведомой фигни</p>
+				<p>приблуд из неведомой фигни</p>
 			</div>
 			<!-- /.Item -->
 		</div>
