--- a/themes/Jusikd_theme/layouts/main_template.htm
+++ b/themes/Jusikd_theme/layouts/main_template.htm
@@ -263,7 +263,7 @@ loadJS = 1
 
 			<!-- Section section-recentworks 1 -->
 			<div id="section-recentworks1">
-				<div class="container">
+				<div class="container-flush">
 					<div class="row">
 						<div class="title1 ez-animate col-12" data-animation="fadeInUp">
 							<h6>СВЕЖИЕ РАБОТЫ</h6>
@@ -275,21 +275,7 @@ loadJS = 1
 								<div class="item col-12 col-md-4">
 									<a href="#">
 										<div class="img-container">
-											<img class="img-fluid" src="{{ 'assets/images/recentworks-1.jpg'|theme }}" alt="Akroot">
-											<div class="overlay">
-												<!--div class="overlay-content">
-													<i></i>
-													<h3>The big drop in slow motion</h3>
-													<p>Photography</p>
-												</div-->
-											</div>
-										</div>
-									</a>
-								</div>
-								<div class="item col-12 col-md-4">
-									<a href="#">
-										<div class="img-container">
-											<img class="img-fluid" src="{{ 'assets/images/recentworks-2.jpg'|theme }}" alt="Akroot">
+											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
 											<div class="overlay">
 												<!--div class="overlay-content">
 													<i></i>
@@ -313,9 +299,137 @@ loadJS = 1
 											</div>
 										</div>
 									</a>
+								</div>
+								<div class="item col-12 col-md-4">
 									<a href="#">
 										<div class="img-container">
-											<img class="img-fluid" src="{{ 'assets/images/recentworks-4.jpg'|theme }}" alt="Akroot">
+											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
+											<div class="overlay">
+												<!--div class="overlay-content">
+													<i></i>
+													<h3>The big drop in slow motion</h3>
+													<p>Photography</p>
+												</div-->
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="item col-12 col-md-4">
+									<a href="#">
+										<div class="img-container">
+											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
+											<div class="overlay">
+												<!--div class="overlay-content">
+													<i></i>
+													<h3>The big drop in slow motion</h3>
+													<p>Photography</p>
+												</div-->
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="item col-12 col-md-4">
+									<a href="#">
+										<div class="img-container">
+											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
+											<div class="overlay">
+												<!--div class="overlay-content">
+													<i></i>
+													<h3>The big drop in slow motion</h3>
+													<p>Photography</p>
+												</div-->
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="item col-12 col-md-4">
+									<a href="#">
+										<div class="img-container">
+											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
+											<div class="overlay">
+												<!--div class="overlay-content">
+													<i></i>
+													<h3>The big drop in slow motion</h3>
+													<p>Photography</p>
+												</div-->
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="item col-12 col-md-4">
+									<a href="#">
+										<div class="img-container">
+											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
+											<div class="overlay">
+												<!--div class="overlay-content">
+													<i></i>
+													<h3>The big drop in slow motion</h3>
+													<p>Photography</p>
+												</div-->
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="item col-12 col-md-4">
+									<a href="#">
+										<div class="img-container">
+											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
+											<div class="overlay">
+												<!--div class="overlay-content">
+													<i></i>
+													<h3>The big drop in slow motion</h3>
+													<p>Photography</p>
+												</div-->
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="item col-12 col-md-4">
+									<a href="#">
+										<div class="img-container">
+											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
+											<div class="overlay">
+												<!--div class="overlay-content">
+													<i></i>
+													<h3>The big drop in slow motion</h3>
+													<p>Photography</p>
+												</div-->
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="item col-12 col-md-4">
+									<a href="#">
+										<div class="img-container">
+											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
+											<div class="overlay">
+												<!--div class="overlay-content">
+													<i></i>
+													<h3>The big drop in slow motion</h3>
+													<p>Photography</p>
+												</div-->
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="item col-12 col-md-4">
+									<a href="#">
+										<div class="img-container">
+											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
+											<div class="overlay">
+												<!--div class="overlay-content">
+													<i></i>
+													<h3>The big drop in slow motion</h3>
+													<p>Photography</p>
+												</div-->
+											</div>
+										</div>
+									</a>
+								</div>
+								<div class="item col-12 col-md-4">
+									<a href="#">
+										<div class="img-container">
+											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
 											<div class="overlay">
 												<!--div class="overlay-content">
 													<i></i>
