В гланый шаблон добавлен компонент ProjectsList

--- a/themes/Jusikd_theme/layouts/main_template.htm
+++ b/themes/Jusikd_theme/layouts/main_template.htm
@@ -4,6 +4,13 @@ description = "Основной шаблон"
 
 [contactForm]
 loadJS = 1
+
+[projectsList]
+projectPage = "project"
+thumbMode = "crop"
+thumbWidth = 640
+thumbHeight = 480
+projectsOnPage = 12
 ==
 {% component 'sweetAlertMessage' %}<!DOCTYPE html>
 <html lang="ru">
@@ -271,176 +278,7 @@ loadJS = 1
 							<i class="flaticon-download"></i>
 						</div>
 						<div class="our-portfolio col-12">
-							<div class="row">
-								<div class="item col-12 col-md-4">
-									<a href="#">
-										<div class="img-container">
-											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
-											<div class="overlay">
-												<!--div class="overlay-content">
-													<i></i>
-													<h3>The big drop in slow motion</h3>
-													<p>Photography</p>
-												</div-->
-											</div>
-										</div>
-									</a>
-								</div>
-								<div class="item col-12 col-md-4">
-									<a href="#">
-										<div class="img-container">
-											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
-											<div class="overlay">
-												<!--div class="overlay-content">
-													<i></i>
-													<h3>The big drop in slow motion</h3>
-													<p>Photography</p>
-												</div-->
-											</div>
-										</div>
-									</a>
-								</div>
-								<div class="item col-12 col-md-4">
-									<a href="#">
-										<div class="img-container">
-											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
-											<div class="overlay">
-												<!--div class="overlay-content">
-													<i></i>
-													<h3>The big drop in slow motion</h3>
-													<p>Photography</p>
-												</div-->
-											</div>
-										</div>
-									</a>
-								</div>
-								<div class="item col-12 col-md-4">
-									<a href="#">
-										<div class="img-container">
-											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
-											<div class="overlay">
-												<!--div class="overlay-content">
-													<i></i>
-													<h3>The big drop in slow motion</h3>
-													<p>Photography</p>
-												</div-->
-											</div>
-										</div>
-									</a>
-								</div>
-								<div class="item col-12 col-md-4">
-									<a href="#">
-										<div class="img-container">
-											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
-											<div class="overlay">
-												<!--div class="overlay-content">
-													<i></i>
-													<h3>The big drop in slow motion</h3>
-													<p>Photography</p>
-												</div-->
-											</div>
-										</div>
-									</a>
-								</div>
-								<div class="item col-12 col-md-4">
-									<a href="#">
-										<div class="img-container">
-											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
-											<div class="overlay">
-												<!--div class="overlay-content">
-													<i></i>
-													<h3>The big drop in slow motion</h3>
-													<p>Photography</p>
-												</div-->
-											</div>
-										</div>
-									</a>
-								</div>
-								<div class="item col-12 col-md-4">
-									<a href="#">
-										<div class="img-container">
-											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
-											<div class="overlay">
-												<!--div class="overlay-content">
-													<i></i>
-													<h3>The big drop in slow motion</h3>
-													<p>Photography</p>
-												</div-->
-											</div>
-										</div>
-									</a>
-								</div>
-								<div class="item col-12 col-md-4">
-									<a href="#">
-										<div class="img-container">
-											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
-											<div class="overlay">
-												<!--div class="overlay-content">
-													<i></i>
-													<h3>The big drop in slow motion</h3>
-													<p>Photography</p>
-												</div-->
-											</div>
-										</div>
-									</a>
-								</div>
-								<div class="item col-12 col-md-4">
-									<a href="#">
-										<div class="img-container">
-											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
-											<div class="overlay">
-												<!--div class="overlay-content">
-													<i></i>
-													<h3>The big drop in slow motion</h3>
-													<p>Photography</p>
-												</div-->
-											</div>
-										</div>
-									</a>
-								</div>
-								<div class="item col-12 col-md-4">
-									<a href="#">
-										<div class="img-container">
-											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
-											<div class="overlay">
-												<!--div class="overlay-content">
-													<i></i>
-													<h3>The big drop in slow motion</h3>
-													<p>Photography</p>
-												</div-->
-											</div>
-										</div>
-									</a>
-								</div>
-								<div class="item col-12 col-md-4">
-									<a href="#">
-										<div class="img-container">
-											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
-											<div class="overlay">
-												<!--div class="overlay-content">
-													<i></i>
-													<h3>The big drop in slow motion</h3>
-													<p>Photography</p>
-												</div-->
-											</div>
-										</div>
-									</a>
-								</div>
-								<div class="item col-12 col-md-4">
-									<a href="#">
-										<div class="img-container">
-											<img class="img-fluid" src="{{ 'assets/images/recentworks-3.jpg'|theme }}" alt="Akroot">
-											<div class="overlay">
-												<!--div class="overlay-content">
-													<i></i>
-													<h3>The big drop in slow motion</h3>
-													<p>Photography</p>
-												</div-->
-											</div>
-										</div>
-									</a>
-								</div>
-							</div>
+							{% component 'projectsList' %}
 						</div>
 					</div>
 				</div>
